<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/leafLogin"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.5"
        android:src="@mipmap/leaf_login_foreground"
        app:layout_constraintBottom_toBottomOf="@+id/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appTitle" />

    <ImageView
        android:id="@+id/leafLogin2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="32dp"
        android:alpha="0.3"
        android:rotationY="180"
        android:src="@mipmap/leaf_login_foreground"
        app:layout_constraintBottom_toTopOf="@+id/joinUsContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leafLogin" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forumAppText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/the_forum_app_you_have_been_waiting_for"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_hint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iconEmailLogin"
        app:layout_constraintTop_toBottomOf="@+id/forumAppText" />


    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_hint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/loginEmail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/loginEmail"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/montserrat"
        android:paddingVertical="12dp"
        android:text="@string/log_in_btn"
        android:textColor="@color/teal_700"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/joinUsContainer"
        app:layout_constraintEnd_toEndOf="@+id/loginPassword"
        app:layout_constraintStart_toStartOf="@+id/iconPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />


    <View
        android:id="@+id/joinUsContainer"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/notAMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/not_a_member"
        android:textColor="@color/dark_hint"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/joinOurTeam"
        app:layout_constraintStart_toStartOf="@+id/joinOurTeam"
        app:layout_constraintTop_toTopOf="@+id/joinUsContainer" />

    <TextView
        android:id="@+id/joinOurTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/join_us_message"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notAMember" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/teal_700"
        android:elevation="10dp"
        android:fontFamily="@font/montserrat"
        android:paddingVertical="12dp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/joinUsContainer"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/joinOurTeam" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/teal_200"
        android:indeterminateTintMode="src_atop"
        android:translationY="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/joinUsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iconEmailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/loginEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_email" />

    <ImageView
        android:id="@+id/iconPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/loginPassword"
        app:layout_constraintStart_toStartOf="@+id/iconEmailLogin"
        app:srcCompat="@drawable/ic_password" />


</androidx.constraintlayout.widget.ConstraintLayout>