<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_homepage.HomepageDashboardFragment">

    <!--    MY QUESTION CONTAINER-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/myQuestionContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_card"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--        MY QUESTION CONTENT-->
        <TextView
            android:id="@+id/myQuestionHomepageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_card_title"
            android:backgroundTint="@color/teal_900"
            android:fontFamily="@font/montserrat"
            android:padding="12dp"
            android:text="@string/my_latest_question_title"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/myLatestQuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat"
            android:maxWidth="250dp"
            android:text="@string/my_question_title_placeholder"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myQuestionHomepageTitle" />

        <TextView
            android:id="@+id/myLatestQuestionTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_placeholder"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            app:layout_constraintStart_toStartOf="@+id/myLatestQuestionTitle"
            app:layout_constraintTop_toBottomOf="@+id/myLatestQuestionTitle" />


        <TextView
            android:id="@+id/myLatestQuestionContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxWidth="260dp"
            android:maxLines="3"
            android:text="@string/content_placeholder"
            app:layout_constraintStart_toStartOf="@+id/myLatestQuestionTopic"
            app:layout_constraintTop_toBottomOf="@+id/myLatestQuestionTopic" />

        <Button
            android:id="@+id/latestQuestionViewThreadButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_card"
            android:backgroundTint="@color/teal_900"
            android:fontFamily="@font/montserrat"
            android:text="@string/open_thread"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myLatestQuestionContent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    MY COURSES CONTAINER-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/myCoursesContainer"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_card"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myQuestionContainer">

        <!--        MY COURSES CONTENT-->
        <TextView
            android:id="@+id/myCoursesHomepageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_card_title"
            android:backgroundTint="@color/teal_900"
            android:fontFamily="@font/montserrat"
            android:padding="12dp"
            android:text="@string/my_courses_title"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/courseListHomepageRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myCoursesHomepageTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    FLOATING ACTION BUTTON CONTAINER-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="20dp"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/homepageFabAddQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/teal_900"
            android:elevation="30dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:src="@drawable/ic_add"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    NO QUESTIONS NO COURSES CONTAINER-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noQuestionsNoCoursesContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/noQuestionsNoCourses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/no_questions_courses"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/askQuestionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/ask_question_text"
            android:textAlignment="center"
            android:textColor="@color/teal_900"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noQuestionsNoCourses" />

        <TextView
            android:id="@+id/OR_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/askQuestionText"
            app:layout_constraintStart_toStartOf="@+id/askQuestionText"
            app:layout_constraintTop_toBottomOf="@+id/askQuestionText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/swipe_right_to_find_courses"
            android:textAlignment="center"
            android:textColor="@color/teal_900"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/askQuestionText"
            app:layout_constraintStart_toStartOf="@+id/askQuestionText"
            app:layout_constraintTop_toBottomOf="@+id/OR_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>